# brook

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/migrations/: 001_init.sql  002_stats_charts.sql
backend/src/: cover_art.rs  dev_log.rs  lib.rs  library_scan.rs  main.rs  models.rs  playback_session.rs  state.rs  waveform.rs
backend/src/audio/: decode.rs  engine.rs  mod.rs  player.rs  spectrum.rs
backend/src/commands/: dev.rs  favorites.rs  library.rs  lyrics.rs  mod.rs  playback.rs  playlists.rs  stats.rs
backend/src/db/: charts.rs  mod.rs  stats.rs
docs/: ARCHITECTURE.md  overview.md
frontend/: global.d.ts  index.html  main.ts  vite-plugin-svg-use.ts
frontend/api/: client.ts  dev-log.ts  events.ts  index.ts  library.ts  lyrics.ts  playback.ts  playlists.ts  stats.ts
frontend/player/: bar.ts  last-track.ts  lrc.ts  lyrics.ts  queue-panel.ts  queue.ts  shortcuts.ts  slider.ts  visualizer.ts  waveform.ts
frontend/public/: README.md  fonts.css  styles.css
frontend/settings/: settings.ts  theme.ts  visual-effects.ts  visual.ts
frontend/styles/: components.css  layout.css  main.css  tokens.css
frontend/types/: index.ts
frontend/ui/: cover-art.ts  dom.ts  entity-page.ts  filters.ts  icons.ts  library.ts  pages.ts  playlist-picker.ts  playlists.ts  recent.ts  router.ts  search.ts  shell.ts  stats.ts  (+1 more)
scripts/: clean-dev.sh  install.sh  linuxdeploy-plugin-gtk.sh  uninstall.sh
