[package]
name = "brook"
version = "0.1.0"
description = "Offline local music player"
authors = ["sky"]
edition = "2021"

[lib]
name = "brook_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "6"
lofty = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "pcm", "aac", "isomp4", "ogg", "wav"] }
rodio = "0.19"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rfd = "0.15"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
